src/style.css
body,
html {
    margin: 0;
    padding: 0;
    overflow: hidden;
}

body {
    background-color: #F3EDEA;
    font-family: Parisine, Arial, Helvetica, sans-serif;
}

@font-face {
    font-family: 'Parisine';
    font-weight: bold;
    src: url('/Parisine-Bold.otf');
}

@font-face {
    font-family: 'Parisine';
    font-weight: normal;
    src: url('/Parisine-Regular.otf');
}

:root {
    --title-color: #1C55B1;
    --time-color: #FFBE00;
    --warning-color: rgb(255, 205, 0);
    --gray: #565759;
}

